checkpoint: multi-session state + G10 §H Stage 1 golden baselines
Working tree accumulated several built-pending sessions (G09 backup engine,
G11 category membership, G10 background attribute, G30 placed mask, doc
migrations). Checkpointed as-is before G10 §H Jar A source edits begin.

New this session: tools/render_preview/BgGoldenPreview.java golden harness,
frozen baselines under tools/render_preview/bg_golden (49 bakes, SHA-256
manifest, self-tested byte-identical), TG10/PROGRESS_LOG updates.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>